package eapli.elearning.examquestionmanagement.domain;

public enum ExamQuestionType {
    MATCHING,
    MULTIPLE_CHOICE,
    SHORT_ANSWER,
    NUMERICAL,
    MISSING_WORDS,
    TRUE_OR_FALSE
}
